--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,10 @@
 {
-    "printWidth": 100,
+    "printWidth": 120,
     "tabWidth": 4,
     "useTabs": false,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "endOfLine": "lf"
+    "trailingComma": "none",
+    "bracketSpacing": true
   }
   
